--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-async-trait = "0.1.88"
-pingora = { version = "0.5.0", features = ["rustls", "lb", "proxy"] }
-tokio = { version = "1.45.1", features = ["fs"] }
+tokio = { version = "1.45.1", features = ["full"] }
