--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "port-mapping"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
+authors = ["share121 <2854631158@qq.com>"]
+repository = "https://github.com/share121/port-mapping"
+readme = "README.md"
+exclude = ["/.github"]
 
 [dependencies]
 tokio = { version = "1.45.1", features = ["full"] }
