--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ authors = ["share121 <2854631158@qq.com>"]
 repository = "https://github.com/share121/port-mapping"
 readme = "README.md"
 exclude = ["/.github"]
+description = "简单的映射端口程序，有基础的负载均衡功能"
+documentation = "https://docs.rs/port-mapping"
+homepage = "https://github.com/share121/port-mapping"
+keywords = ["port", "mapping", "tokio", "concurrency", "performance"]
+categories = ["network-programming", "command-line-utilities"]
 
 [dependencies]
 tokio = { version = "1.45.1", features = ["full"] }
