--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,15 +24,15 @@ jobs:
         include:
           - build: linux-arm64
             os: ubuntu-22.04-arm
-            target: aarch64-unknown-linux-gnu
+            target: aarch64-unknown-linux-musl
             archive-name: port-mapping-linux-arm64
           - build: linux-32bit
             os: ubuntu-22.04
-            target: i686-unknown-linux-gnu
+            target: i686-unknown-linux-musl
             archive-name: port-mapping-linux-32bit
           - build: linux-64bit
             os: ubuntu-22.04
-            target: x86_64-unknown-linux-gnu
+            target: x86_64-unknown-linux-musl
             archive-name: port-mapping-linux-64bit
           - build: macos-arm64
             os: macos-14
