--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
     strategy:
       matrix:
         build:
+          - linux-arm32
           - linux-arm64
           - linux-32bit
           - linux-64bit
@@ -21,6 +22,10 @@ jobs:
           - windows-64bit
           - windows-32bit
         include:
+          - build: linux-arm32
+            os: ubuntu-22.04-arm
+            target: armv7-unknown-linux-musleabi
+            archive-name: port-mapping-linux-arm32
           - build: linux-arm64
             os: ubuntu-22.04-arm
             target: aarch64-unknown-linux-musl
