--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ keywords = ["port", "mapping", "tokio", "concurrency", "performance"]
 categories = ["network-programming", "command-line-utilities"]
 
 [dependencies]
+socket2 = { version = "0.5.10", default-features = false }
 tokio = { version = "1.45.1", default-features = false, features = [
   "fs",
   "io-util",
