--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
         run: cargo test --all-features --verbose
 
       - name: Build
-        run: cargo build --verbose
+        run: cargo build --all-features --verbose
 
   check-minimal:
     name: Check minimal versions
